policies/kyverno/tests/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: secure-pod
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: app
      image: registry.k8s.io/pause:3.10.1
---
apiVersion: v1
kind: Pod
metadata:
  name: insecure-pod
spec:
  containers:
    - name: app
      image: registry.k8s.io/pause:3.10.1
